<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_settings">Settings</string>
    <string name="app_name">Fractal Eye</string>
    <string name="fe_abbrev">FE</string>
    <string name="category" translatable="false">category</string>
    <string name="settings">settings</string>
    <string name="texture">texture</string>
    <string name="shape">Shape</string>
    <string name="color">color</string>
    <string name="position">position</string>
    <string name="reaction" translatable="false">reaction</string>
    <string name="display_param1" translatable="false">param1</string>
    <string name="display_param2" translatable="false">param2</string>
    <string name="display_param3" translatable="false">param3</string>
    <string name="display_param4" translatable="false">param4</string>
    <string name="e" translatable="false">e</string>
    <string name="welcome_message" translatable="false">Welcome to Fractal Eye!</string>
    <string name="tutorial_position1" tools:ignore="ExtraTranslation" translatable="false">To move around and explore the fractal, click the POSITION button.</string>
    <string name="tutorial_position2" translatable="false">Swipe in any direction to move</string>
    <string name="tutorial_position3" translatable="false">Pinch to zoom in or out!</string>
    <string name="tutorial_color1" translatable="false">To change how the fractal is colored, click the COLOR button.</string>
    <string name="tutorial_color2" translatable="false">Swipe left or right to shift the colors</string>
    <string name="tutorial_color3" translatable="false">Pinch to make the colors change more or less frequently!</string>
    <string name="empty" translatable="false"> </string>
    <string name="reset">Reset</string>
    <string name="new_str">new</string>
    <string name="view">view</string>
    <string name="done">done</string>
    <string name="random">random</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="defaultIP" translatable="false">"35.245.206.128"</string>
    <string name="defaultPORT" translatable="false">"64000"</string>
    <string name="reload">reload</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_dims" translatable="false">width x height</string>
    <string name="precision">Precision</string>
    <string name="hardware" translatable="false">hardware</string>
    <string name="render">render</string>
    <string name="display">display</string>
    <string name="precision_bits" translatable="false">32-bit</string>
    <string name="resolution_low">Low</string>
    <string name="resolution_high">High</string>
    <string name="precision_single">single</string>
    <string name="precision_dual">dual</string>
    <string name="hardware_gpu" translatable="false">gpu</string>
    <string name="hardware_cpu" translatable="false">cpu</string>
    <string name="precision_auto">auto</string>
    <string name="save">save</string>
    <string name="continuous_render">Continuous Render</string>
    <string name="display_params">Display Parameters</string>
    <string name="render_background">Render Background</string>
    <string name="hide_nav_bar">Hide Navigation Bar</string>
    <string name="fit_viewport">Fit Image To Display Window</string>
    <string name="show_hints" translatable="false">Show Hints</string>
    <string name="continuous_render_hint">Render the image during position changes</string>
    <string name="render_background_hint">Render a larger low-resolution image underneath the main image</string>
    <string name="display_params_hint">Show window with relevant parameters during touch gestures</string>
    <string name="fit_viewport_hint">Show the entire rendered image</string>
    <string name="changelog">Changes</string>
    <string name="texture_name" translatable="false">Texture Name</string>
    <string name="texture_param_name" translatable="false">Texture Parameter Name</string>
    <string name="escape_radius">Escape Radius</string>
    <string name="radius">radius</string>
    <string name="mode">mode</string>
    <string name="texture_mode">Texture Mode</string>
    <string name="texture_mode_out">out</string>
    <string name="texture_mode_in">in</string>
    <string name="texture_mode_both">both</string>
    <string name="bailout_hint" translatable="false">Determines how large the numbers can get during calcualtion before terminating</string>
    <string name="shape_name" translatable="false">Shape Name</string>
    <string name="dscript_shape_preview">shape preview image</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="julia" translatable="false">Julia</string>
    <string name="param1">Param 1</string>
    <string name="param2">Param 2</string>
    <string name="param3">Param 3</string>
    <string name="param4">Param 4</string>
    <string name="sensitivity">sensitivity</string>
    <string name="max_iter">iterate</string>
    <string name="julia_mode">Julia Mode</string>
    <string name="max_iter_hint" translatable="false">Determines the maximum number of calculations per pixel.
        Increasing will make shape more defined but increase render time.</string>
    <string name="julia_mode_hint" translatable="false">Use a parameter to create each type of shape that can be found within the main shape</string>
    <string name="slower">Slower</string>
    <string name="faster">Faster</string>
    <string name="more_detail">More detail</string>
    <string name="less_detail">Less detail</string>
    <string name="palette">Palette</string>
    <string name="palette_name" translatable="false">Palette Name</string>
    <string name="frequency">Frequency</string>
    <string name="offset">Phase</string>
    <string name="solid_fill">fill</string>
    <string name="solid_fill_white">white</string>
    <string name="solid_fill_black">black</string>
    <string name="autofit">auto</string>
    <string name="phase_hint" translatable="false">Determines the color offset. Swipe left or right with one finger to change.</string>
    <string name="freq_hint" translatable="false">Determines how frequently the colors change. Use pinch gestures to change.</string>
    <string name="x" translatable="false">x</string>
    <string name="y" translatable="false">y</string>
    <string name="xy" translatable="false">xy</string>
    <string name="zoom" translatable="false">zoom</string>
    <string name="rotation">rotation</string>
    <string name="rotate">rotate</string>
    <string name="mandelbrot" translatable="false">Mandelbrot</string>
    <string name="mandelbrot_cubic">Mandelbrot Cubic</string>
    <string name="mandelbrot_quartic">Mandelbrot Quartic</string>
    <string name="mandelbrot_quintic">Mandelbrot Quintic</string>
    <string name="mandelbrot_anypow">Mandelbrot (Power)</string>
    <string name="clover">Clover</string>
    <string name="burning_ship">Burning Ship</string>
    <string name="burning_ship_anypow">Burning Ship (Power)</string>
    <string name="mandelbox">Mandelbox</string>
    <string name="kali" translatable="false">Kali</string>
    <string name="sine1">Sine 1</string>
    <string name="sine2">Sine 2</string>
    <string name="horseshoe_crab">Horseshoe Crab</string>
    <string name="kleinian" translatable="false">Kleinian</string>
    <string name="nova1" translatable="false">Nova 1</string>
    <string name="nova2" translatable="false">Nova 2</string>
    <string name="collatz" translatable="false">Collatz</string>
    <string name="mandelex" translatable="false">Mandelex</string>
    <string name="yinyang">Yin Yang</string>
    <string name="night">Night</string>
    <string name="cosmic">Cosmic</string>
    <string name="peacock">Peacock</string>
    <string name="elephant">Elephant</string>
    <string name="oldskool">Old Sk00l</string>
    <string name="gold">Gold</string>
    <string name="p9">P9</string>
    <string name="viridis">Viridis</string>
    <string name="plasma">Plasma</string>
    <string name="magma">Magma</string>
    <string name="vascular">Vascular</string>
    <string name="flora">Flora</string>
    <string name="royal">Royal</string>
    <string name="groovy">Groovy</string>
    <string name="canyon">Canyon</string>
    <string name="anubis">Anubis</string>
    <string name="backwards">Backwards</string>
    <string name="slow">Slow</string>
    <string name="alpha">Alpha</string>
    <string name="peach">Peach</string>
    <string name="jazz" translatable="false">Jazz</string>
    <string name="chroma">Chroma</string>
    <string name="island">Island</string>
    <string name="bioluminescent">Bioluminescent</string>
    <string name="kingfisher">Kingfisher</string>
    <string name="polygon">Polygon</string>
    <string name="rose">Rose</string>
    <string name="fossil">Fossil</string>
    <string name="atlas">Atlas</string>
    <string name="escape">Escape Time</string>
    <string name="escape_smooth">Escape Time (Smooth)</string>
    <string name="exponential_smooth">Exponential Smoothing</string>
    <string name="distance_est">Distance Estimation</string>
    <string name="triangle_ineq_avg">Triangle Inequality Average</string>
    <string name="triangle_ineq_avg_int" translatable="false">Triangle Inequality Average (Int)</string>
    <string name="triangle_ineq_avg_float" translatable="false">Triangle Inequality Average (Float)</string>
    <string name="curvature_avg">Curvature Average</string>
    <string name="stripe_avg">Stripe Average</string>
    <string name="orbit_trap_miny">Orbit Trap</string>
    <string name="normal1">Normal Map 1</string>
    <string name="normal2">Normal Map 2</string>
    <string name="overlay_avg">Overlay Average</string>
    <string name="stripe_avg_bins" translatable="false">Stripe Average (Bins)</string>
    <string name="stripe_median_bins" translatable="false">Stripe Median (Bins)</string>
    <string name="stripe_mode_bins" translatable="false">Stripe Mode (Bins)</string>
    <string name="density">Density</string>
    <string name="thickness" translatable="false">Thickness</string>
    <string name="sharpness">Sharpness</string>
    <string name="msg_invalid_format">Invalid number format</string>
    <string name="msg_zoom_limit">Zoom limit reached</string>
    <string name="msg_dual_in1">Switching to dual-precision…</string>
    <string name="msg_dual_in2">Image generation will be slower</string>
    <string name="msg_dual_out1">Switching to single-precision…</string>
    <string name="msg_dual_out2">Image generation will be faster</string>
    <string name="msg_save_successful">Image saved to </string>
    <string name="msg_save_failed">Image not saved: storage permission required</string>
    <string name="msg_save_wait">Please wait for the image to finish rendering</string>
    <string name="msg_save_enabled">Image saving enabled - click again to save</string>
    <string name="msg_num_out_range">Number out of range</string>
    <string name="msg_cpu">Switching to CPU…</string>
    <string name="msg_textures_disabled">Textures disabled</string>
    <string name="msg_gpu">Switching to GPU…</string>
    <string name="msg_textures_enabled">Textures enabled</string>
    <string name="msg_error">An error occurred! Sorry about that :(</string>
    <string name="msg_img_save_error1">Error saving image…</string>
    <string name="msg_img_save_error2">Make sure storage permissions are enabled</string>
    <string name="msg_perturb">Switching to perturbation mode…</string>
    <string name="msg_classic">Switching to classic mode…</string>
</resources>