<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/randomizerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ui_component_bg"
    android:orientation="horizontal"
    android:padding="12dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/randomizeTextureSwitch"
            style="@style/SwitchDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="4dp"
            android:text="@string/texture"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:switchPadding="20dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/randomizeColorSwitch"
            style="@style/SwitchDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="4dp"
            android:text="@string/color"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/randomizeTextureSwitch"
            app:layout_constraintTop_toBottomOf="@+id/randomizeTextureSwitch"
            app:switchPadding="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/randomizeShapeSwitch"
            style="@style/SwitchDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="4dp"
            android:text="@string/shape"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:switchPadding="20dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/randomizePositionSwitch"
            style="@style/SwitchDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="4dp"
            android:text="@string/position"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/randomizeShapeSwitch"
            app:layout_constraintTop_toBottomOf="@+id/randomizeShapeSwitch"
            app:switchPadding="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>